--- a/w.fsproj
+++ b/w.fsproj
@@ -46,6 +46,7 @@
     <Compile Include="kv.fs" />
     <Compile Include="crud.fs" />
     <Compile Include="LiteServer.fs" />
+    <Compile Include="numtest.fs" />
     <Compile Include="main.fs" />
     <None Include="packages.config" />
   </ItemGroup>
