move elmo back here from its temporary home over in ericsink/LSM

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,20 @@
 /obj/**
 *.userprefs
 /fsharp_elmo/packages/**
-
+*/obj/**
+*/*/bin/**
+*/*/obj/**
+*/*/*/bin/**
+*/*/*/obj/**
+*/*/*/*/bin/**
+*/*/*/*/obj/**
+/fsharp_lsm/packages/**
+Cargo.lock
+/lsm/target
+/misc/target
+/lsm/tmp
+/bson/target
+/server/target
+/elmo/target
+/rust-sqlite/target
+/storage/sqlite3/target
