progress on date/time stuff, using the time crate

--- a/elmo/Cargo.toml
+++ b/elmo/Cargo.toml
@@ -10,6 +10,9 @@ path = "../misc"
 [dependencies.bson]
 path = "../bson"
 
+[dependencies]
+time = "*"
+
 # The testing profile, used for `cargo test`
 [profile.test]
 opt-level = 3
