--- a/bson/Cargo.toml
+++ b/bson/Cargo.toml
@@ -7,6 +7,9 @@ authors = [ "Eric Sink <eric@zumero.com>" ]
 [dependencies.misc]
 path = "../misc"
 
+[dependencies]
+time = "*"
+
 # The testing profile, used for `cargo test`
 [profile.test]
 opt-level = 3
