--- a/misc/Cargo.toml
+++ b/misc/Cargo.toml
@@ -4,6 +4,9 @@ name = "misc"
 version = "0.0.1"
 authors = [ "Eric Sink <eric@zumero.com>" ]
 
+[dependencies]
+rand = "*"
+
 # The testing profile, used for `cargo test`
 [profile.test]
 opt-level = 3
