fix KeyRef range checking in lsm.  switch elmo default build from sqlite to lsm.  everything broken, for now.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,8 +13,8 @@ path = "../bson"
 [dependencies.elmo]
 path = "../elmo"
 
-[dependencies.elmo_sqlite3]
-path = "../storage/sqlite3"
+[dependencies.elmo_lsm]
+path = "../storage/lsm"
 
 # The testing profile, used for `cargo test`
 [profile.test]
