instead of storing keys as 1 byte of flags and a len, store the overflow flag in the len.  inline is stored len * 2.  overflow is len * 2 + 1.

--- a/diag_lsm/Cargo.toml
+++ b/diag_lsm/Cargo.toml
@@ -7,6 +7,9 @@ authors = [ "Eric Sink <eric@zumero.com>" ]
 [dependencies.lsm]
 path = "../lsm"
 
+[dependencies]
+rand = "*"
+
 # The testing profile, used for `cargo test`
 [profile.test]
 opt-level = 3
