--- a/diag_lsm/Cargo.toml
+++ b/diag_lsm/Cargo.toml
@@ -7,6 +7,9 @@ authors = [ "Eric Sink <eric@zumero.com>" ]
 [dependencies.lsm]
 path = "../lsm"
 
+[dependencies.rust-sqlite]
+path = "../rust-sqlite"
+
 [dependencies]
 rand = "*"
 
